--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -233,5 +233,35 @@
   "yourProfileHeader": "Il Tuo Profilo",
   "generatedFromProphetInteractions": "Generato dalle tue interazioni con i profeti",
   "noBiographicalContentAvailable": "Nessun contenuto biografico disponibile",
-  "deleteAllDataTooltip": "Elimina Tutti i Dati"
+  "deleteAllDataTooltip": "Elimina Tutti i Dati",
+  "privacyConsentTitle": "Privacy dei Dati e Personalizzazione",
+  "privacyConsentMessage": "Per fornirti risposte personalizzate, Orakl può memorizzare e analizzare le tue interazioni con i profeti.\n\nQuesti dati sono utilizzati esclusivamente per migliorare la tua esperienza e non saranno mai condivisi con partner esterni.\n\nVuoi abilitare le risposte personalizzate?",
+  "enablePersonalization": "Abilita Personalizzazione",
+  "disablePersonalization": "Disabilita Personalizzazione",
+  "reviewPrivacyPolicy": "Consulta Privacy Policy",
+  "privacySettings": "Impostazioni Privacy",
+  "privacySettingsDescription": "Gestisci le tue preferenze di personalizzazione dati",
+  "personalizationStatus": "Stato Personalizzazione",
+  "enabled": "Abilitata",
+  "disabled": "Disabilitata",
+  "howItWorks": "Come Funziona",
+  "personalizationEnabledDescription": "Le tue interazioni con i profeti vengono analizzate per fornire risposte personalizzate.",
+  "personalizationDisabledDescription": "La personalizzazione è disabilitata. Nessun dato viene raccolto dalle tue interazioni.",
+  "personalizationEnabledFeature1": "Vengono raccolte informazioni dalle tue domande e conversazioni",
+  "personalizationEnabledFeature2": "Questi dati aiutano i profeti a dare risposte più pertinenti",
+  "personalizationEnabledFeature3": "I tuoi dati non vengono mai condivisi con partner esterni",
+  "personalizationDisabledFeature1": "Nessuna informazione personale viene raccolta o memorizzata",
+  "personalizationDisabledFeature2": "I profeti forniscono risposte generiche",
+  "personalizationDisabledFeature3": "Puoi abilitare la personalizzazione in qualsiasi momento",
+  "settings": "Impostazioni",
+  "updating": "Aggiornamento...",
+  "disablePersonalizationWarning": "Attenzione: Disabilitare la personalizzazione eliminerà permanentemente tutti i dati raccolti.",
+  "enablePersonalizationNote": "Nota: Abilitare la personalizzazione inizierà a raccogliere dati dalle future interazioni.",
+  "privacyPolicy": "Privacy Policy",
+  "confirmDisablePersonalization": "Conferma Disabilitazione Personalizzazione",
+  "disablePersonalizationConfirmMessage": "Sei sicuro di voler disabilitare la personalizzazione? Questa azione eliminerà permanentemente tutti i tuoi dati raccolti e non può essere annullata.",
+  "cancel": "Annulla",
+  "disable": "Disabilita",
+  "personalizationEnabledSuccess": "Personalizzazione abilitata con successo",
+  "personalizationDisabledSuccess": "Personalizzazione disabilitata e dati eliminati con successo"
 }
