Refactor application name from ProfetAI to Orakl
- Updated application title and configuration references throughout the codebase.
- Changed localization strings for English and Italian to reflect the new app name.
- Modified debug information and logging to use Orakl instead of ProfetAI.
- Adjusted import paths and database names to align with the new project structure.
- Updated CMake and Xcode project files to reflect the new application name.
- Changed web manifest and index.html to use Orakl as the app name.
- Updated test files to reference Orakl instead of ProfetAI.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "Profet AI",
+  "appTitle": "Orakl",
   "@appTitle": {
     "description": "Application title"
   },
@@ -796,8 +796,8 @@
     "description": "Skip button text for onboarding screens"
   },
 
-  "welcomeToProfetAI": "Welcome to Profet AI",
-  "@welcomeToProfetAI": {
+  "welcomeToOrakl": "Welcome to Orakl",
+  "@welcomeToOrakl": {
     "description": "Main welcome title for onboarding"
   },
 
