--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -196,21 +196,21 @@
   "reset": "Reimposta",
   "onboardingResetSuccess": "Onboarding reimpostato con successo. Riavvia l'app per vedere il flusso di onboarding.",
   "onboardingResetFailed": "Impossibile reimpostare l'onboarding: {error}",
-  "conversationStatistics": "Statistiche Conversazioni",
-  "totalConversations": "Conversazioni Totali",
+  "conversationStatistics": "Statistiche Visioni",
+  "totalConversations": "Visioni Totali",
   "totalMessages": "Messaggi Totali",
-  "averageMessagesPerConversation": "Media Messaggi per Conversazione",
+  "averageMessagesPerConversation": "Media Messaggi per Visione",
   "dataManagement": "Gestione Dati",
-  "clearAllConversations": "Cancella Tutte le Conversazioni",
-  "clearAllConversationsTitle": "Cancella Tutte le Conversazioni",
-  "clearAllConversationsContent": "⚠️ Questa azione eliminerà permanentemente TUTTA la cronologia delle conversazioni e non può essere annullata.\n\nSei sicuro di voler continuare?",
+  "clearAllConversations": "Cancella Tutte le Visioni",
+  "clearAllConversationsTitle": "Cancella Tutte le Visioni",
+  "clearAllConversationsContent": "⚠️ Questa azione eliminerà permanentemente TUTTA la cronologia delle visioni e non può essere annullata.\n\nSei sicuro di voler continuare?",
   "deleteAll": "Elimina Tutto",
-  "deletingAllConversations": "Eliminazione di tutte le conversazioni...",
-  "conversationsDeletedSuccess": "Tutte le conversazioni eliminate con successo",
-  "conversationsDeleteFailed": "Impossibile eliminare le conversazioni: {error}",
+  "deletingAllConversations": "Eliminazione di tutte le visioni...",
+  "conversationsDeletedSuccess": "Tutte le visioni eliminate con successo",
+  "conversationsDeleteFailed": "Impossibile eliminare le visioni: {error}",
   "noConversationsYet": "Nessuna conversazione ancora",
-  "noConversationsDescription": "Inizia a chattare con un profeta per vedere le statistiche delle tue conversazioni qui.",
-  "failedToLoadConversationData": "Impossibile caricare i dati delle conversazioni: {error}",
+  "noConversationsDescription": "Inizia a chattare con un profeta per vedere le statistiche delle tue visioni qui.",
+  "failedToLoadConversationData": "Impossibile caricare i dati delle visioni: {error}",
   "personalInformationDescription": "Gestisci le tue informazioni personali di base",
   "interestsAndTopicsDescription": "Seleziona le tue aree di interesse",
   "personalizeYourExperienceDescription": "Personalizza le tue preferenze di guida",
