--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -263,5 +263,32 @@
   "cancel": "Annulla",
   "disable": "Disabilita",
   "personalizationEnabledSuccess": "Personalizzazione abilitata con successo",
-  "personalizationDisabledSuccess": "Personalizzazione disabilitata e dati eliminati con successo"
+  "personalizationDisabledSuccess": "Personalizzazione disabilitata e dati eliminati con successo",
+  "feedbackUpdated": "Feedback aggiornato!",
+  "failedToUpdateFeedback": "Impossibile aggiornare il feedback: {error}",
+  "waitTimeActive": "Tempo di Attesa Attivo",
+  "watchAdTitle": "Guardare Pubblicità?",
+  "youSkippedAdEarlier": "Hai saltato una pubblicità in precedenza",
+  "youAskedOneQuestion": "Hai fatto 1 domanda!",
+  "youAskedMultipleQuestions": "Hai fatto {count} domande!",
+  "waitOrWatchAdMessage": "Attendi {timeString} o guarda una pubblicità per continuare a interrogare l'oracolo.",
+  "unlimitedOracleWisdomMessage": "Per continuare a ricevere saggezza illimitata dall'oracolo, guarda una breve pubblicità o salta e aspetta 4 ore.",
+  "aboutThirtySeconds": "~30 secondi",
+  "freeToUse": "Gratuito",
+  "waitButton": "Aspetta",
+  "skipButton": "Salta",
+  "watchAdButton": "Guarda Pubblicità",
+  "preparingAd": "Preparando pubblicità...",
+  "retryButton": "Riprova",
+  "feedbackGreat": "Ottimo",
+  "feedbackPoor": "Scarso",
+  "feedbackFunny": "Divertente",
+  "saveVision": "Salva",
+  "shareVision": "Condividi",
+  "closeVision": "Chiudi",
+  "typeYourMessage": "Scrivi il tuo messaggio...",
+  "aiGenerated": "Generato dall'IA",
+  "minutesAgo": "{count}m fa",
+  "hoursAgo": "{count}h fa",
+  "daysAgo": "{count}g fa"
 }
