Refactor localization files for improved clarity and consistency

--- a/lib/l10n/prophets/roaster_prophet/roaster_prophet_it.json
+++ b/lib/l10n/prophets/roaster_prophet/roaster_prophet_it.json
@@ -6,7 +6,7 @@
     "description": "Il nome dell'Oracolo Satirico"
   },
   
-  "description": "Sarcasmo divino con verità brutalmente oneste dall'Oltre",
+  "description": "Sarcasmo divino con verità brutalmente oneste",
   "@description": {
     "description": "Descrizione dell'Oracolo Satirico"
   },
